--- a/style.css
+++ b/style.css
@@ -1,44 +1,60 @@
 *{
     padding: 0;
     margin: 0;
+    font-family: sans-serif;
 }
 .container{
-    max-width: 1200px;
+    max-width: 1050px;
     margin: 0 auto;
+    
 }
 .navbar{
     display: flex;
     height: 80px;
-    width: 1200px;
+    width: 1050px;
+    position: fixed;
+    top: 0;
+    background-color: white;
     
 }
 
 .img{
     background-image: url(onecard_logo.png);
-    background-size: cover;
-    height: 100%;
+    background-size: contain;
+    height: 80px;
     width: 80px;
 }
 
 .nav_anchors{
     display: flex;
-    justify-content: space-evenly;
-    width: 80%;
+    justify-content: flex-end;
+    width: 100%;
     text-decoration: none;
     align-items: center;
-    padding-left: 80px;
+    
+    
 }
+
+.nav_anchors a{
+    text-decoration: none;
+    color: black;
+    font-weight: 600;
+    padding-left: 70px;
+}
+
 .header_button{
     background-color: #1893F7;
     font-size: 14px;
-    margin: 0px 55.5px 0px 16px;
+    margin-left: 70px;
     padding: 4px 8px;
     color: white;
     
 }
 
+/* hero_section */
+
 .hero_section{
-    height: 800px;
+    height: 500px;
     margin-top: 100px;
     display: flex;
     justify-content: center;
@@ -91,4 +107,347 @@ p .Playstore_logo {
 .hero_button{
     background-color: #1893F7;
     color: white;
+    height: 2rem;
+    width: 5rem;
+    border: none;
+    border-radius: 10%;
+}
+
+.fees{
+    height: 517px;
+    width: ;
+    background-color: black;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.head{
+    margin: 42.88px 0px;
+    font-size: 64px;
+    background: linear-gradient(90deg, rgba(33, 126, 230, 1) 3%, rgba(49, 135, 213, 1) 44%, rgba(105, 167, 152, 1) 70%, rgba(252, 242, 166, 1) 95%);
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.fill{
+    font-size: 48px;
+
+}
+
+/* powerfullmobileapp */
+
+.powerfullmobileapp{
+    height: 558px;
+    padding: 48px 0px 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.powerfullmobileapp video{
+    width: 540px;
+    height: 460px;
+    padding: 0px 15px;
+}
+
+.powerfullmobileapp_right{
+    width: 540px;
+    height: 394px;
+    text-align: right;
+}
+.powerfullmobileapp_right img{
+    height: 83.29px;
+    width: 67.4px;
+
+}
+
+.powerfullmobileapp_right h1{
+    font-size: 59.2px;
+}
+
+.powerfullmobileapp_right p{
+    font-size: 25.6px;
+    color: rgb(50, 50, 50, 0.8) ;
+    margin-top: 20px;
+}
+
+/* metalsection */
+
+.metalsection{
+    padding: 50px 0px;
+    height: 510px;
+    display: flex;
+    justify-content: center;
+    background-color: rgba(231, 231, 231, 0.471);
+    
+}
+
+.metalvideo video{
+    height: 510px;
+    width: 510px;
+}
+
+.metal{
+    font-size: 64px;
+    margin-top: 30px;
+}
+.metal_left{
+    padding: 0px 20px;
+}
+.metalvideo{
+    padding: 0px 20px;
+}
+
+.metalmatter{
+    font-size: 30px;
+    color: rgb(50, 50, 50, 0.8) ;
+    margin-top: 30px;
+    
+}
+
+/* OC_seamless_onboarding */
+
+.OC_seamless_onboarding{
+    height: 558px;
+    padding: 48px 0px 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.OC_seamless_onboarding video{
+    width: 540px;
+    height: 460px;
+    padding: 0px 15px;
+}
+
+.OC_seamless_onboarding_right{
+    width: 540px;
+    height: 394px;
+    text-align: right;
+}
+.OC_seamless_onboarding_right img{
+    height: 83.29px;
+    width: 67.4px;
+
+}
+
+.OC_seamless_onboarding_right h1{
+    font-size: 59.2px;
+}
+
+.OC_seamless_onboarding_right p{
+    font-size: 25.6px;
+    color: rgb(50, 50, 50, 0.8) ;
+    margin-top: 20px;
+}
+
+/* reward section  */
+
+.rewardsection{
+    height: 558px;
+    padding: 48px 0px 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(231, 231, 231, 0.471);
+}
+
+.rewardsection video{
+    width: 540px;
+    height: 460px;
+    padding: 0px 15px;
+}
+
+.rewardsection_left{
+    width: 540px;
+    height: 394px;
+}
+.rewardsection_left img{
+    height: 83.29px;
+    width: 67.4px;
+
+}
+
+.rewardsection_left h1{
+    font-size: 59.2px;
+}
+
+.rewardsection_left p{
+    font-size: 25.6px;
+    color: rgb(50, 50, 50, 0.8) ;
+    margin-top: 20px;
+}
+
+/* emi section  */
+
+.emisection{
+    height: 558px;
+    padding: 48px 0px 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.emisection video{
+    width: 540px;
+    height: 460px;
+    padding: 0px 15px;
+}
+
+.emisection_right{
+    width: 540px;
+    height: 394px;
+    text-align: right;
+}
+.emisection_right img{
+    height: 83.29px;
+    width: 67.4px;
+
+}
+
+.emisection_right h1{
+    font-size: 59.2px;
+}
+
+.emisection_right p{
+    font-size: 25.6px;
+    color: rgb(50, 50, 50, 0.8) ;
+    margin-top: 20px;
+}
+
+/* family section */
+
+.familysection{
+    height: 558px;
+    padding: 48px 0px 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(231, 231, 231, 0.471);
+}
+
+.familysection video{
+    width: 540px;
+    height: 460px;
+    padding: 0px 15px;
+    
+}
+
+.familysection_left{
+    width: 540px;
+    height: 394px;
+}
+.familysection_left img{
+    height: 83.29px;
+    width: 67.4px;
+
+}
+
+.familysection_left h1{
+    font-size: 59.2px;
+}
+
+.familysection_left p{
+    font-size: 25.6px;
+    color: rgb(50, 50, 50, 0.8) ;
+    margin-top: 20px;
+    margin-bottom: 50px;
+    
+}
+
+.bankingpartners{
+    height: 337.36px;
+    padding: 50px 0px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: rgba(231, 231, 231, 0.471);
+}
+
+.bankingpartners h1{
+    font-size: 64px;
+    padding: 8px 0px;
+    height: 112px;
+}
+
+.bankingpartners p{
+    font-size: 26px;
+    color: #696969;
+}
+
+.bankingpartners img{
+    width: 330px;
+    height: 61.33px;
+    margin-top: 30px;
+}
+
+/* investors */
+
+.Investors{
+    height: 337.36px;
+    padding: 50px 0px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.Investors h1{
+    font-size: 64px;
+    padding: 8px 0px;
+    height: 112px;
+}
+
+.Investors p{
+    font-size: 26px;
+    color: #696969;
+    text-align: center;
+    margin: 40px 0px;
+}
+
+.investors_logo{
+    display: flex;
+    width: 270px;
+    height: 166.04px;
+    padding: 0px 15px 20px;
+    justify-content: center;
+}
+
+footer{
+ display: flex;
+ flex-direction: column;
+ align-items: center;
+ background-color: #0c161b;
+ color: white;
+}
+
+footer .onecard_logo{
+    height: 120px;
+    width: 120px;
+    margin-bottom: 20px;
+}
+
+footer h2{
+    margin-top: 30px;
+    font-size: 36px;
+    color: #0093f7;
+    height: 94px;
+
+}
+
+footer p{
+    font-size: 20px;
+}
+
+footer h3{
+    font-size: 20px;
+    background-color: #0093f7;
+}
+
+footer h3 {
+    margin: 20px;
+
 }
