--- a/rode website/style.css
+++ b/rode website/style.css
@@ -245,6 +245,10 @@ button{
 footer{
     background-color: black;
     color: white;
+    margin: 0px auto;
+    padding: 80px 0px;
+    display: flex;
+    justify-content: center;
 }
 
 footer a{
@@ -256,9 +260,9 @@ footer a{
 
 .footer{
     display: flex;
-    margin: 0px 65.2px;
-    padding: 48px 15px;
-    justify-content:space-around;
+    gap: 80px;
+    justify-content:space-evenly;
+    max-width: 1200px;
 }
 
 .Products, .services, .company, .subscribe {
